--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/styles.css" type="text/css">
-    <title>Informativo Covid-19</title>
+    <title>Informativo Covid-19 - Página Inicial</title>
     <link rel="icon" href="Images/corona-4931132_1280.png" type="image/png">
 </head>
 
@@ -28,17 +28,17 @@
     </div>
 
     <div id="Apenas-ignore">
-        <div id="Caixinha">
+        <div class="Caixinha">
 
             <p class="Titulo-mapa">Mapa dos casos confirmados ao redor do mundo</p>
             <div id="mapa-mundi"></div>
             <div class="Texto">
                 <p>
                     Este mapa-múndi mostra todos os casos confirmados de Covid-19 por país. A cor mais clara
-                    representa os países com menos casos, a mais escura, os países com mais casos confirmados.
+                    representa os países com menos casos, a mais escura, os países com mais casos confirmados*.
                 </p>
             </div>
-            <p class="Referencias">As informações apresentadas no mapa podem ser acessadas em:
+            <p class="Referencias">*As informações apresentadas no mapa podem ser acessadas em:
                 <a href="https://covid19-brazil-api.vercel.app/api/report/v1/countries" class="Link">
                     https://covid19-brazil-api.vercel.app/api/report/v1/countries</a>
             </p>
@@ -51,10 +51,10 @@
             <div class="Texto">
                 <p>
                     Este gráfico mostra a porcentagem de todos os casos confirmados de Covid-19 em relação aos óbitos. A
-                    porcentagem óbitos mostra a taxa de letalidade da doença.
+                    porcentagem óbitos mostra a taxa de letalidade da doença*.
                 </p>
             </div>
-            <p class="Referencias">As informações apresentadas no gráfico podem ser acessadas em:
+            <p class="Referencias">*As informações apresentadas no gráfico podem ser acessadas em:
                 <a href="https://covid19-brazil-api.vercel.app/api/report/v1/countries" class="Link">
                     https://covid19-brazil-api.vercel.app/api/report/v1/countries</a>
             </p>
@@ -69,7 +69,7 @@
                     <p>
                         Esta tabela mostra especificamente dados das unidades federativas do Brasil. Entre eles estão
                         os:
-                        casos confirmados, óbitos, suspeitos e descartados.
+                        casos confirmados, óbitos, suspeitos e descartados*.
                     </p>
                 </div>
                 <thead>
@@ -85,7 +85,7 @@
                 <tbody id="linhas"></tbody>
             </table>
 
-            <p class="Referencias">As informações apresentadas no gráfico podem ser acessadas em:
+            <p class="Referencias">*As informações apresentadas no gráfico podem ser acessadas em:
                 <a href="https://covid19-brazil-
                 api.now.sh/api/report/v1" class="Link">
                     https://covid19-brazil-
