--- a/about.html
+++ b/about.html
@@ -28,7 +28,8 @@
         <div id="descricao" class="configs">
             <p class="Subtitulos">O que é o projeto?</p>
 
-            <p class="Texto">Somos integrantes de um curso técnico do Senai (Serviço Nacional de Aprendizagem Industrial) chamado
+            <p class="Texto">Somos integrantes de um curso técnico do Senai (Serviço Nacional de Aprendizagem
+                Industrial) chamado
                 "Desenvolvimento de Sistemas", e nos foi proposto o desafio de criar um site com dados referentes à
                 pandemia
                 de Sars-Cov-2, causador da doença Covid-19. Para tal feito, estudamos, entre aulas teóricas e práticas,
@@ -46,7 +47,8 @@
 
         <div id="objetivo">
             <p class="Subtitulos">Quais seriam os objetivos?</p>
-            <p class="Texto">Além do aprendizado acerca das API's, ficam mais dois objetivos principais: informar e disponibilizar. No
+            <p class="Texto">Além do aprendizado acerca das API's, ficam mais dois objetivos principais: informar e
+                disponibilizar. No
                 quesito de informar, a apresentação dos dados é o principal ponto central, conectando os servidores e
                 recebendo os dados. Já na parte de disponibilização, fomos instruidos de como deixarmos nosso site
                 público
@@ -56,7 +58,8 @@
 
         <div id="tecnologias" class="configs">
             <p class="Subtitulos">Quais foram as tecnologias utilizadas?</p>
-            <p class="Texto">O atual assunto de nossas aulas no Senai é programação em JavaScript (que é diferente de Java). Por meio
+            <p class="Texto">O atual assunto de nossas aulas no Senai é programação em JavaScript (que é diferente de
+                Java). Por meio
                 dele, podemos criar maiores interações no site, assim como podemos armazenar e manipular dados. Uma
                 dessas
                 formas é utilizando os API's. Também utilizamos nossos conhecimentos prévios em programação de HTML e
@@ -68,7 +71,33 @@
                 cadastrados. É possível o trabalho em equipes no "Git Hub", porém, este site foi desenvolvido sozinho.
             </p>
         </div>
-    </div>
+
+        <div id="links">
+            <p class="Subtitulos">Referências dos dados</p>
+
+            <div class="Referencias">
+                <p class="SubSubtitulos">Dados do mapa aqui:
+                    <a href="https://covid19-brazil-api.now.sh/api/report/v1/countries"
+                        class="Link">https://covid19-brazil-api.now.sh/api/report/v1/countries
+                    </a>
+                </p>
+            </div>
+
+            <div class="Referencias">
+                <p class="SubSubtitulos">Dados do gráfico aqui:
+                    <a href="https://covid19-brazil-api.vercel.app/api/report/v1/countries"
+                        class="Link">https://covid19-brazil-api.now.sh/api/report/v1/countries
+                    </a>
+                </p>
+                </p>
+            </div>
+
+            <div class="Referencias">
+                <p class="SubSubtitulos">Dados da tabela aqui:
+                    <a href="https://covid19-brazil-api.now.sh/api/report/v1"
+                        class="Link">https://covid19-brazil-api.now.sh/api/report/v1</a>
+            </div>
+        </div>
 
 </body>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
