--- a/about.html
+++ b/about.html
@@ -89,13 +89,14 @@
                         class="Link">https://covid19-brazil-api.now.sh/api/report/v1/countries
                     </a>
                 </p>
-                </p>
             </div>
 
             <div class="Referencias">
                 <p class="SubSubtitulos">Dados da tabela aqui:
                     <a href="https://covid19-brazil-api.now.sh/api/report/v1"
-                        class="Link">https://covid19-brazil-api.now.sh/api/report/v1</a>
+                        class="Link">https://covid19-brazil-api.now.sh/api/report/v1
+                    </a>
+                </p>
             </div>
         </div>
 
