--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <img id="Corona" src="Images/corona-4931132_1280.png" alt="">
-        <p class="Titulos">Informativo Covid-19</p>
+        <p class="Titulos">Informativo Covid-19 - Página inicial</p>
         <div id="Menu">
             <nav id="menuhorizontal">
                 <a href="index.html">Página inicial</a>
@@ -72,17 +72,19 @@
                         casos confirmados, óbitos, suspeitos e descartados*.
                     </p>
                 </div>
-                <thead>
-                    <tr>
-                        <th>Unidade Federativa</th>
-                        <th>Estado</th>
-                        <th>Casos</th>
-                        <th>Óbitos</th>
-                        <th>Suspeitos</th>
-                        <th>Descartados</th>
-                    </tr>
-                </thead>
-                <tbody id="linhas"></tbody>
+                <div id="Funciona-poha">
+                    <thead>
+                        <tr>
+                            <th>UF</th>
+                            <th>Estado</th>
+                            <th>Casos</th>
+                            <th>Óbitos</th>
+                            <th>Suspeitos</th>
+                            <th>Descartados</th>
+                        </tr>
+                    </thead>
+                    <tbody id="linhas"></tbody>
+                </div>
             </table>
 
             <p class="Referencias">*As informações apresentadas no gráfico podem ser acessadas em:
